...
    <string name="homescreen_todo_string" translatable="false">homescreen_todo_id</string>
    <string name="homescreen_todo_heading">TODO</string>
    <string name="homescreen_recent_id" translatable="false">homescreen_recent_id</string>
    <string name="homescreen_recent_heading">Recent</string>

    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="tab_title_main">Main</string>
    <string name="tab_title_todo">Todo</string>
    <string name="tab_title_assignments">Assign.</string>
    <string name="assignments">Assignments</string>
    <string name="todo_addButton_content_description">Add</string>
    <string name="todo_input_hint">Enter a new item here ...</string>
    <string name="string_todo_active_header" translatable="false">Active</string>
    <string name="string_todo_done_header" translatable="false">Done</string>

...
    <string name="university_login_name">Name of the university</string>
    <string name="assignment_sync_now">Sync Now</string>
    <string name="university_login_successful">Login successful</string>
    <string name="university_login_failed">Login failed</string>
    <string name="custom_assignment_set_deadline">Set deadline</string>
    <string name="custom_assignment_title">Add custom assignment</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="custom_assignment_title_input">Title</string>
    <string name="custom_assignmnet_description_input">Description</string>
    <string name="assignment_dialog_completed_button">Done</string>
    <string name="text_assignment_completed">Done Assignments</string>
    <string name="text_assignment_active">Active Assignments</string>

</resources>

