<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_assignment_details_linearlayout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.AssignmentDetailsFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/assignmentsListDetailsDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="" />

    <TextView
        android:id="@+id/assignmentsListDetailsDeadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="" />

    <TextView
        android:id="@+id/assignmentsListDetailsLinks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:autoLink="web"
        android:clickable="true"
        android:text=""
        android:focusable="true" />

    <Button
        android:id="@+id/addMeToCalendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/add_to_calendar" />

    <Button
        android:id="@+id/assignmentsListDetailsCompletedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/assignment_dialog_completed_button" />

...
