...
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.AssignmentsTabFragment">

    <Button
        android:id="@+id/assignment_sync_assignments"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/assignment_sync_now"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SearchView
        android:id="@+id/assignment_searchview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"

        android:title="@string/assignment_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
...

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assignment_sync_assignments"
        app:showAsAction="always" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/assignmentsListNotCompleted"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/text_assignment_completed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_assignment_active">

    </androidx.recyclerview.widget.RecyclerView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/assignmentListCompleted"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_assignment_completed" />
...
        app:layout_constraintBottom_toTopOf="@+id/assignmentsListNotCompleted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assignment_searchview" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/custom_assignment_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/assignments_addButton_margin_offset"
        android:layout_marginBottom="@dimen/assignments_addButton_margin_offset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
