<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_assignment_custom_details"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.CustomAssignmentDialog"
    android:orientation="vertical">

...

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/custom_assignment_description_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/custom_assignmnet_description_input" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/custom_assignment_deadline_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/custom_assignment_set_deadline" />

...
